# number-detection

./: .gitignore  README.org  pyproject.toml
data/: single-turn-data-corrected.csv
data/transcriptions/: transcription-single-turn-dg-prerecorded-nova-2-phonecall-en.csv  transcription-single-turn-dg-prerecorded.csv  transcription-single-turn-google-chirp-2.csv  transcription-single-turn-google-telephony-short.csv  transcription-single-turn-whisper-large-v3.csv
number_detection/: data.py  models.py
scripts/: evaluate-speech-llm.py  evaluate.py  transcribe-deepgram.py  transcribe-speech-llm.py  transcribe-whisper.py  transcribe.py
